--- a/.github/workflows/npm-test.yml
+++ b/.github/workflows/npm-test.yml
@@ -3,12 +3,12 @@ name: CI
 on:
   push:
     branches:
-      - main
+      - master
     tags:
       - '*'
   pull_request:
     branches:
-      - main
+      - master
 
 permissions:
   contents: read
