--- a/.github/workflows/external.yml
+++ b/.github/workflows/external.yml
@@ -36,7 +36,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - id: set-matrix
-        run: echo "::set-output name=matrix::$(cat external.json | jq -c '.${{ github.event.inputs.moduleSet || 'compliant' }}')"
+        run: echo "matrix=$(cat workflow-external.json | jq -c '.${{ github.event.inputs.moduleSet || 'compliant' }}')" >> $GITHUB_OUTPUT
   test_external:
     needs: read_external_projects
     name: Test ${{ matrix.project }}
