--- a/.github/workflows/npm-test.yml
+++ b/.github/workflows/npm-test.yml
@@ -28,6 +28,5 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node_version }}
-        cache: 'npm'
-    - run: npm ci
+    - run: npm i
     - run: npm test
